--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jacob Meche</title>
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div>
   <h1>Jacob Meche</h1>
-  <p>dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years. 
+  <p>Dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years.</p> 
 </div>
   <div class="exp-header">
-    <h3>summary of qualifications</h3>
-  </div>
-  <div>
-    <ul>
+    <h3>Summary of Qualifications</h3>
+    </div><ul>
        <li>5+ years in wood frame construction field.</li>
        <li>Started with the basics over five years ago learning from the bottom up</li>
        <li>Professionally and voluntarily assumed on site managerial and supervisory positons</li>
@@ -23,9 +20,10 @@
        <li>Developed proficient and realistic timelines and delegated tasks ensuring quality control and job completion</li>
        <li>Worked hand in hand with heavy equipment operators as well as Draft and Survey personnel</li>
        <li>Produced Build of Materials (BOM) and partook in site surveys for possible and recent clients/customers</li>
-    </div>
+  </ul>
+  </div>
      <div>
-      <h3>Experience and achievements</h3>
+      <h3>Experience and Achievements</h3>
     </div>
       <div>
        <h5>United States Marine Corps</h5>
