--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <div>
   <h1>Jacob Meche</h1>
   <p>Dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years.</p> 
-</div>
+<img src="file:///var/folders/1w/1wfn3nd53g9cpc5tk2p7lgp00000gn/T/com.apple.iChat/Messages/Transfers/IMG_0254.JPG"/>
+  </div>
+  
   <div class="exp-header">
     <h3>Summary of Qualifications</h3>
     </div><ul>
@@ -76,3 +78,4 @@
     </ol>
 </body>
 </html>
+
