--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel"stylesheet" href="style.css"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jacob Meche</title>
@@ -27,7 +28,7 @@
      <div>
       <h3>Experience and Achievements</h3>
     </div>
-      <div>
+<div>
        <h5>United States Marine Corps</h5>
     </div>
       <div>
@@ -48,8 +49,8 @@
       <div>
        <h5>Middle East</h5>
     </div>
-     <div>
-      <ul>
+     <div>  
+<ul>
        <li>Built structures in conflicting and dangerously stressful situations and areas including inclemental weather as well as type of terrain</li>
        <li>Worked with many heavy equipment specialists and mechanics to ensure the highest tier safety standards throughout our numerous job completions</li>
       </ul>
@@ -78,4 +79,3 @@
     </ol>
 </body>
 </html>
-
