--- a/index.html
+++ b/index.html
@@ -1,81 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
+ <head>
   <link rel"stylesheet" href="style.css"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <div class="resume">
   <title>Jacob Meche</title>
-</head>
-<body>
-  <div>
+ </head>
+   
+ <body>
   <h1>Jacob Meche</h1>
-  <p>Dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years.</p> 
-<img src="file:///var/folders/1w/1wfn3nd53g9cpc5tk2p7lgp00000gn/T/com.apple.iChat/Messages/Transfers/IMG_0254.JPG"/>
-  </div>
-  
-  <div class="exp-header">
+   <div id="p">
+    <p>Dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years.</p> 
+   </div>
+   <img src="file:///var/folders/1w/1wfn3nd53g9cpc5tk2p7lgp00000gn/T/com.apple.iChat/Messages/Transfers/IMG_0254.JPG"/>
+   <div class="h3">
     <h3>Summary of Qualifications</h3>
-    </div><ul>
-       <li>5+ years in wood frame construction field.</li>
-       <li>Started with the basics over five years ago learning from the bottom up</li>
-       <li>Professionally and voluntarily assumed on site managerial and supervisory positons</li>
-       <li>Trained on average 3 personnel per month for over 3 years of on and off site construction</li>
-       <li>Developed proficient and realistic timelines and delegated tasks ensuring quality control and job completion</li>
-       <li>Worked hand in hand with heavy equipment operators as well as Draft and Survey personnel</li>
-       <li>Produced Build of Materials (BOM) and partook in site surveys for possible and recent clients/customers</li>
-  </ul>
-  </div>
-     <div>
-      <h3>Experience and Achievements</h3>
-    </div>
-<div>
-       <h5>United States Marine Corps</h5>
-    </div>
-      <div>
-       <h4 align="right">2021-2017</h4>
-    </div>
-      <div>
-       <h5>Camp Pendleton, California</h5>
-    </div>
-     <div>
-      <ul>
-       <li>Continued learning basics of construction</li>
-       <li>Learning the logistical side of how job sites are established, run, and proper eagress when job is complete</li>
-       <li>Within first year, acheiving the right to manage construction sites one at a time</li>
-       <li>Training fellow employees on and off site, in areas they were most suited for on our jobs sites</li>
-       <li>Continued to grow network on our military base in order to ensure mission completion through logistics</li>
-      </ul>
-    </div>
-      <div>
-       <h5>Middle East</h5>
-    </div>
-     <div>  
-<ul>
+   <div class= "ul">
+   <ul>
+    <div class="li">
+     <li>5+ years in wood frame construction field.</li>
+     <li>Started with the basics over five years ago learning from the bottom up</li>
+     <li>Professionally and voluntarily assumed on site managerial and supervisory positons</li>
+     <li>Trained on average 3 personnel per month for over 3 years of on and off site construction</li>
+     <li>Developed proficient and realistic timelines and delegated tasks ensuring quality control and job completion</li>
+     <li>Worked hand in hand with heavy equipment operators as well as Draft and Survey personnel</li>
+     <li>Produced Build of Materials (BOM) and partook in site surveys for possible and recent clients/customers</li>
+   </ul>
+    <h3>Experience and Achievements</h3>
+   <div class="h5">
+    <h5>United States Marine Corps</h5>
+    <div class="h4">
+    <h4 align="right">2021-2017</h4>
+    <h5>Camp Pendleton, California</h5>
+   <ul>
+     <li>Continued learning basics of construction</li>
+     <li>Learning the logistical side of how job sites are established, run, and proper eagress when job is complete</li>
+     <li>Within first year, acheiving the right to manage construction sites one at a time</li>
+     <li>Training fellow employees on and off site, in areas they were most suited for on our jobs sites</li>
+     <li>Continued to grow network on our military base in order to ensure mission completion through logistics</li>
+   </ul>
+    <h5>Middle East</h5>
+   <ul>
        <li>Built structures in conflicting and dangerously stressful situations and areas including inclemental weather as well as type of terrain</li>
        <li>Worked with many heavy equipment specialists and mechanics to ensure the highest tier safety standards throughout our numerous job completions</li>
-      </ul>
-    </div>
-      <div>
+        </ul>
        <h4>Toledo Bend Repair Services</h4>
-    </div>
-      <div>
        <h5 align="right">2015-2013</h5>
-    </div>
-      <div>
        <h4>Sabine Parish, Louisiana</h4>
-    </div>
-      <div>
        <h4>Construction Hand</h4>
+     </div>
      <ul>
       <li>Construction worker for two years mainly focusing on the lower end of the framing industry and learning how it is setup</li>
      </ul>
-    </div>
     <h3>Education and Training</h3>
-    <ol>
+   </div>
+    <ul>
       <li>Tactical Combat Casualty Care Course(This course trains military personnel to care for serious and life threatening injuries)<p align="right">2018</p></li>
       <li>Tram and Forklift heavy equipment operating lisences(only applicable under Department of Defense)<p align="right">2018</p></li>
       <li>Marine Corps Combat Engineer School<p align="right">2017</p></li>
       <li>30 hour OSHA certification<p align="right">2015</p></li>
-    </ol>
-</body>
-</html>
+    </div>
+    </ul>
+   </div>
+   </body>
+  </html></div>
