--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="resume">
   <title>Jacob Meche</title>
  </head>
-   
+  
  <body>
   <h1>Jacob Meche</h1>
    <div id="p">
@@ -19,34 +19,35 @@
    <div class= "ul">
    <ul>
     <div class="li">
-     <li>5+ years in wood frame construction field.</li>
-     <li>Started with the basics over five years ago learning from the bottom up</li>
-     <li>Professionally and voluntarily assumed on site managerial and supervisory positons</li>
-     <li>Trained on average 3 personnel per month for over 3 years of on and off site construction</li>
-     <li>Developed proficient and realistic timelines and delegated tasks ensuring quality control and job completion</li>
-     <li>Worked hand in hand with heavy equipment operators as well as Draft and Survey personnel</li>
-     <li>Produced Build of Materials (BOM) and partook in site surveys for possible and recent clients/customers</li>
+       <li>5+ years in wood frame construction field.</li>
+       <li>Started with the basics over five years ago learning from the bottom up</li>
+       <li>Professionally and voluntarily assumed on site managerial and supervisory positons</li>
+       <li>Trained on average 3 personnel per month for over 3 years of on and off site construction</li>
+       <li>Developed proficient and realistic timelines and delegated tasks ensuring quality control and job completion</li>
+       <li>Worked hand in hand with heavy equipment operators as well as Draft and Survey personnel</li>
+       <li>Produced Build of Materials (BOM) and partook in site surveys for possible and recent clients/customers</li>
    </ul>
     <h3>Experience and Achievements</h3>
    <div class="h5">
     <h5>United States Marine Corps</h5>
-    <div class="h4">
-    <h4 align="right">2021-2017</h4>
-    <h5>Camp Pendleton, California</h5>
-   <ul>
-     <li>Continued learning basics of construction</li>
-     <li>Learning the logistical side of how job sites are established, run, and proper eagress when job is complete</li>
-     <li>Within first year, acheiving the right to manage construction sites one at a time</li>
-     <li>Training fellow employees on and off site, in areas they were most suited for on our jobs sites</li>
-     <li>Continued to grow network on our military base in order to ensure mission completion through logistics</li>
-   </ul>
-    <h5>Middle East</h5>
+      <div class="h4">
+     <h4 align="right">2021-2017</h4>
+       <h5>Camp Pendleton, California</h5>
+      <ul>
+       <li>Continued learning basics of construction</li>
+       <li>Learning the logistical side of how job sites are established, run, and proper eagress when job is complete</li>
+       <li>Within first year, acheiving the right to manage construction sites one at a time</li>
+       <li>Training fellow employees on and off site, in areas they were most suited for on our jobs sites</li>
+       <li>Continued to grow network on our military base in order to ensure mission completion through logistics</li>
+      </ul>
+       <h5>Middle East</h5>
    <ul>
        <li>Built structures in conflicting and dangerously stressful situations and areas including inclemental weather as well as type of terrain</li>
        <li>Worked with many heavy equipment specialists and mechanics to ensure the highest tier safety standards throughout our numerous job completions</li>
-        </ul>
+      </ul>
        <h4>Toledo Bend Repair Services</h4>
        <h5 align="right">2015-2013</h5>
+     </div>
        <h4>Sabine Parish, Louisiana</h4>
        <h4>Construction Hand</h4>
      </div>
@@ -64,4 +65,5 @@
     </ul>
    </div>
    </body>
-  </html></div>
+   </div>
+  </html>
