--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <link rel"stylesheet" href="style.css"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <div class="resume">
-  <title>Jacob Meche</title>
+   <title>Jacob Meche</title>
  </head>
-  
- <body>
+ <body style="background-color:lightgray">
+   <div id="h1">
   <h1>Jacob Meche</h1>
-   <div id="p">
+   </div>
+   <div class="p">
     <p>Dedicated and experienced wood frame construction worker with supervisory positions over the past 5+ years.</p> 
    </div>
-   <img src="file:///var/folders/1w/1wfn3nd53g9cpc5tk2p7lgp00000gn/T/com.apple.iChat/Messages/Transfers/IMG_0254.JPG"/>
    <div class="h3">
     <h3>Summary of Qualifications</h3>
    <div class= "ul">
@@ -41,15 +40,15 @@
        <li>Continued to grow network on our military base in order to ensure mission completion through logistics</li>
       </ul>
        <h5>Middle East</h5>
-   <ul>
+      <ul>
        <li>Built structures in conflicting and dangerously stressful situations and areas including inclemental weather as well as type of terrain</li>
        <li>Worked with many heavy equipment specialists and mechanics to ensure the highest tier safety standards throughout our numerous job completions</li>
       </ul>
-       <h4>Toledo Bend Repair Services</h4>
+       <h5>Sabine Parish, Louisiana</h5>
        <h5 align="right">2015-2013</h5>
      </div>
-       <h4>Sabine Parish, Louisiana</h4>
-       <h4>Construction Hand</h4>
+       <h5>Toledo Bend Repair Services</h5> 
+       <h5>Construction Hand</h5>
      </div>
      <ul>
       <li>Construction worker for two years mainly focusing on the lower end of the framing industry and learning how it is setup</li>
@@ -57,13 +56,12 @@
     <h3>Education and Training</h3>
    </div>
     <ul>
-      <li>Tactical Combat Casualty Care Course(This course trains military personnel to care for serious and life threatening injuries)<p align="right">2018</p></li>
-      <li>Tram and Forklift heavy equipment operating lisences(only applicable under Department of Defense)<p align="right">2018</p></li>
-      <li>Marine Corps Combat Engineer School<p align="right">2017</p></li>
-      <li>30 hour OSHA certification<p align="right">2015</p></li>
+     <li>Tactical Combat Casualty Care Course(This course trains military personnel to care for serious and life threatening injuries)<p align="right">2018</p></li>
+     <li>Tram and Forklift heavy equipment operating lisences(only applicable under Department of Defense)<p align="right">2018</p></li>
+     <li>Marine Corps Combat Engineer School<p align="right">2017</p></li>
+     <li>30 hour OSHA certification<p align="right">2015</p></li>
     </div>
     </ul>
    </div>
-   </body>
-   </div>
-  </html>
+  </body>
+</html>
